--- a/main.css
+++ b/main.css
@@ -88,6 +88,7 @@
 	background-color: white;
 	opacity: 0.5;
 	border-radius: 50%;
+	display: block;
 	position: absolute;
 	top: 50%;
 	transform: translate(-50%, -50%);
